organizando el meta

--- a/index.html
+++ b/index.html
@@ -10,32 +10,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
 
-    <meta name="title" content="Crud with react📝" />
-    <meta
-      name="description"
-      content="El sistema web CRUD es una plataforma eficiente y fácil de usar para gestionar y manipular datos de manera efectiva."
-    />
+    <meta name="title" content="form-crud-api-jm" />
+    <meta name="description" content="Proyecto para ensayo del uso del CRUD" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://weather-app-snow.netlify.app/" />
-    <meta property="og:title" content="Crud with react📝" />
+    <meta property="og:url" content="https://form-crud-api-jm.netlify.app/" />
+    <meta property="og:title" content="form-crud-api-jm" />
     <meta
       property="og:description"
-      content="El sistema web CRUD es una plataforma eficiente y fácil de usar para gestionar y manipular datos de manera efectiva."
+      content="Proyecto para ensayo del uso del CRUD"
     />
     <meta property="og:image" content="/images/URL.jfif" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://weather-app-snow.netlify.app/"
+      content="https://form-crud-api-jm.netlify.app/"
     />
-    <meta property="twitter:title" content="Crud with react📝" />
+    <meta property="twitter:title" content="form-crud-api-jm" />
     <meta
       property="twitter:description"
-      content="El sistema web CRUD es una plataforma eficiente y fácil de usar para gestionar y manipular datos de manera efectiva."
+      content="Proyecto para ensayo del uso del CRUD"
     />
-    <meta property="twitter:image" content="/images/crud.png" />
+    <meta property="twitter:image" content="/images/URL.jfif" />
   </head>
   <body>
     <div id="root"></div>
